--- a/htmltest.html
+++ b/htmltest.html
@@ -15,7 +15,7 @@
 
 <body>
     <section id="header">
-        <a href="#"><img src="img/Logo2.jpg" class="logo" alt="Company Logo"></a>
+        <a href="#"><img src="Logo2.jpg" class="logo" alt="Company Logo"></a>
 
         <div>
             <ul id="navbar">
@@ -40,27 +40,27 @@
 
     <section id="feature" class="section-p1">
         <div class="fe-box">
-            <img src="img/features/fe1.png" alt="" width="100" height="100">
+            <img src="fe1.png" alt="" width="100" height="100">
             <h6>Free Shipping</h6>
         </div>
 
         <div class="fe-box">
-            <img src="img/features/fe2.png" alt="" width="100" height="100">
+            <img src="fe2.png" alt="" width="100" height="100">
             <h6>Online Order</h6>
         </div>
 
         <div class="fe-box">
-            <img src="img/features/fe3.png" alt="" width="100" height="100">
+            <img src="fe3.png" alt="" width="100" height="100">
             <h6>Promotions</h6>
         </div>
 
         <div class="fe-box">
-            <img src="img/features/fe4.png" alt="" width="100" height="100">
+            <img src="fe4.png" alt="" width="100" height="100">
             <h6>Sell Happy</h6>
         </div>
         
         <div class="fe-box">
-            <img src="img/features/fe7.png" alt="" width="100" height="100">
+            <img src="fe7.png" alt="" width="100" height="100">
             <h6>Customer Support</h6>
         </div>
     </section>
@@ -70,7 +70,7 @@
         <p>Summer Collection New Modern Design</p>
         <div class="pro-container">
             <div class="pro">
-                <img src="img/shirt1.webp" alt="">
+                <img src="shirt1.webp" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Razaq T-Shirts</h5>
@@ -87,7 +87,7 @@
             </div>
 
             <div class="pro">
-                <img src="img/shirt1.webp" alt="">
+                <img src="shirt1.webp" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Razaq T-Shirts</h5>
@@ -104,7 +104,7 @@
             </div>
 
             <div class="pro">
-                <img src="img/shirt1.webp" alt="">
+                <img src="shirt1.webp" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Razaq T-Shirts</h5>
@@ -121,7 +121,7 @@
             </div>
 
             <div class="pro">
-                <img src="img/shirt1.webp" alt="">
+                <img src="shirt1.webp" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Razaq T-Shirts</h5>
@@ -138,7 +138,7 @@
             </div>
 
             <div class="pro">
-                <img src="img/shirt1.webp" alt="">
+                <img src="shirt1.webp" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Razaq T-Shirts</h5>
@@ -155,7 +155,7 @@
             </div>
 
             <div class="pro">
-                <img src="img/shirt1.webp" alt="">
+                <img src="shirt1.webp" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Razaq T-Shirts</h5>
@@ -172,7 +172,7 @@
             </div>
 
             <div class="pro">
-                <img src="img/shirt1.webp" alt="">
+                <img src="shirt1.webp" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Razaq T-Shirts</h5>
@@ -189,7 +189,7 @@
             </div>
 
             <div class="pro">
-                <img src="img/shirt1.webp" alt="">
+                <img src="shirt1.webp" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Razaq T-Shirts</h5>
